# ground_aware_cartographer

./: README.md
cartographer/: setup.bash  setup.sh  setup.zsh
cartographer/include/cartographer/mapping/: map_builder.h  trajectory_builder_interface.h
cartographer/include/cartographer/sensor/: timed_point_cloud_data.h
cartographer/share/cartographer/cmake/: CartographerTargets.cmake
cartographer/share/cartographer/configuration_files/: wgh_map_builder.lua  wgh_trajectory_builder.lua  wgh_trajectory_builder_3d.lua
cartographer_ros/: CMakeLists.txt
cartographer_ros/cartographer_ros/: CMakeLists.txt  map_builder_bridge.cc  map_builder_bridge.h  msg_conversion.cc  msg_conversion.h  node.cc  node.h  node_constants.h  node_main.cc  sensor_bridge.cc  sensor_bridge.h
cartographer_ros/cartographer_ros/fast_ground_detection/: detection_utility.cc  detection_utility.h  fast_ground_detection.cc  fast_ground_detection.h  smart_sector.cc  smart_sector.h
cartographer_ros/cmake/: functions_for_cartographer_ros.cmake
cartographer_ros/configuration_files/: wgh_backpack_3d.lua  wgh_demo_3d.rviz
cartographer_ros/launch/: wgh_backpack_3d.launch  wgh_demo_backpack_3d.launch  wgh_demo_backpack_3d_localization.launch
cartographer_ros/urdf/: wgh_backpack_3d.urdf
cartographer_rviz/: CMakeLists.txt
